--- a/o1feedback.css
+++ b/o1feedback.css
@@ -1,7 +1,7 @@
 body {
-  background: BG_COLOR;
-  color: TEXT_COLOR;
-  font-family: "FONT_NAME", sans-serif;
+  background: BG_COLOR !important;
+  color: TEXT_COLOR !important;
+  font-family: "FONT_NAME", sans-serif !important;
   font-weight: 500;
   padding: 30px;
 }
