--- a/feedback2.css
+++ b/feedback2.css
@@ -1,7 +1,13 @@
+:root {
+  --bg-color: #ffffff;
+  --fg-color: #222222;
+  --font-name: "Inter";
+}
+
 body {
-  background: BG_COLOR;
-  color: TEXT_COLOR;
-  font-family: "FONT_NAME", sans-serif;
+  background: var(--bg-color) !important;
+  color: var(--fg-color) !important;
+  font-family: var(--font-name), sans-serif !important;
   font-weight: 500;
   padding: 30px;
 }
